# AI

./: .env  README.md  pyproject.toml
Agent/: Prompt_Template.ipynb  RAG_Agent.ipynb  ReAct_Agent.ipynb  Structure_Output.ipynb  Tool_Binding.ipynb
LLM/: API_Calls.ipynb
RAG/: hh.py  rag.ipynb
RAG/chroma_db/: chroma.sqlite3
