[project]
name = "ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.5",
    "openai>=2.45.0",
    "pypdf>=6.14.2",
]
